@@ -5,12 +5,12 @@ dnl libxslt is the main part of the package
 dnl
 LIBXSLT_MAJOR_VERSION=1
 LIBXSLT_MINOR_VERSION=0
-LIBXSLT_MICRO_VERSION=2
+LIBXSLT_MICRO_VERSION=3
 PACKAGE=libxslt
 LIBEXSLT_MAJOR_VERSION=0
 LIBEXSLT_MINOR_VERSION=3
-LIBEXSLT_MICRO_VERSION=0
-LIBXML_REQUIRED_VERSION=2.4.2
+LIBEXSLT_MICRO_VERSION=1
+LIBXML_REQUIRED_VERSION=2.4.3
 
 
 LIBXSLT_VERSION=$LIBXSLT_MAJOR_VERSION.$LIBXSLT_MINOR_VERSION.$LIBXSLT_MICRO_VERSION
